--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0",
